@@ -1,6 +1,6 @@
 <div class='status $styles' id='$id' data-inreplyto='$in_reply_to'>
   <div class='icon'>
-    <a href='$userlink'
+    <a href='$userlink' title='$user_description'
        style='color: #$user_color;'>
       <img src='$image_uri' class='usericon' width='36' height='36'></a>
   </div>
