@@ -1,5 +1,7 @@
 2013-06-15  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>
 
+	* twitter/tweetentry.py: Added tooltips for user description on
+	  Twitter user icons.
 	* menu.py, twitter/tweetentry.py: Added support for opening new
 	  tabs from Twittter user icons (issue #37).
 
